# legislator-gala-challenge

./: README.md  pyproject.toml
src/: main.py
tests/: test_main.py
