[tool.poetry]
name = "legislator-gala-challenge"
version = "0.1.0"
description = ""
authors = ["Jessica Geramanis-Bowden <jessica.mbowden@gmail.com>"]
readme = "README.md"
packages = [{include = "legislator_gala_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
